--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="padding_regular">10dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
+
+    <dimen name="small_padding">4dp</dimen>
 </resources>
