Add feedback button to survey whether users like the article or not and Add custom_background1

--- a/app/src/main/res/layout-land/song_list.xml
+++ b/app/src/main/res/layout-land/song_list.xml
@@ -79,10 +79,11 @@
         android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/article_subheading"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/standard_margin"
         android:layout_marginLeft="@dimen/standard_margin"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="@dimen/standard_margin"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginRight="@dimen/standard_margin"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.example.android.songdetailstart.MainActivity"
