--- a/app/src/main/res/layout/activity_song_detail.xml
+++ b/app/src/main/res/layout/activity_song_detail.xml
@@ -11,7 +11,7 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:background="@drawable/custom_background3">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/detail_toolbar"
