--- a/app/src/main/res/layout/song_detail.xml
+++ b/app/src/main/res/layout/song_detail.xml
@@ -1,7 +1,20 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/song_detail"
-    style="?android:attr/textAppearanceLarge"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/standard_margin"
-    android:textIsSelectable="true"/>
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+    <ImageView
+        android:id="@+id/team_icon_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/standard_margin"
+        android:layout_weight="1"/>
+
+    <TextView
+        android:id="@+id/song_detail"
+        style="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/standard_margin"
+        android:textIsSelectable="true"
+        android:layout_weight="4"/>
+</LinearLayout>
