--- a/app/src/main/res/layout-land/event_list.xml
+++ b/app/src/main/res/layout-land/event_list.xml
@@ -79,13 +79,14 @@
         android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/article_subheading"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/standard_margin"
         android:layout_marginLeft="@dimen/standard_margin"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="@dimen/standard_margin"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginRight="@dimen/standard_margin"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.example.android.songdetailstart.MainActivity"
-        tools:listitem="@layout/song_list_content" />
+        tools:listitem="@layout/event_list_content" />
 
 </RelativeLayout>
