--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -10,7 +10,7 @@
         android:layout_weight="1"/>
 
     <TextView
-        android:id="@+id/song_detail"
+        android:id="@+id/event_detail"
         style="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
