--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@color/feedback_fragment_color"
     android:orientation="horizontal"
-    tools:context="com.example.android.songdetail.FeedbackFragment">
+    tools:context="com.example.android.eventdetail.FeedbackFragment">
 
     <TextView
         android:id="@+id/fragment_header"
