--- a/app/src/main/res/layout/event_list_content.xml
+++ b/app/src/main/res/layout/event_list_content.xml
@@ -4,6 +4,16 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/theme_icon_item"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_margin="4dp"
+        android:scaleX="1.25"
+        android:scaleY="1.25"
+        />
+
     <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
